# FlipperOS

apps/: CMakeLists.txt  api.h  app.ld  pico_sdk_import.cmake  shell.cpp  word.cpp
flipper_host/: CMakeLists.txt  application.fam  flipper_os_client.c  flipper_os_viewer.c  fvp_transport.c  fvp_transport.h  storage_server.c  storage_server.h
shared/: fvp_protocol.h
vgm_kernel/: CMakeLists.txt  pico_sdk_import.cmake
vgm_kernel/src/: fs_proxy.cpp  fs_proxy.h  fvp_transport.cpp  fvp_transport.h  kernel_main.cpp  loader.cpp  main.cpp  tusb_config.h  ui.h  usb_host.cpp  usb_host.h  video.cpp  video.h
